Néi, ni napensaikurihína upéva rehe, ajepichaiterei ha añepyrûjey añe'ê hendive.
Nañe'êvéi hendive.
Che chepychyeterei rupi añepyrûjey añe'ê hendive
Iporâ ore ñemongeta.
Che aimo'âukuri upéva peteî privilegioha. Aimo'â gueteri, ha'e gueteri. Che añoite upe 922 ExO aiméva upe oñeñanihápe AFFC Fuerza Armada Mba'épe.
Ndaikuaáikuri nacheañoiha upe árape.
Aimo'âkuri cheañoha upe papapy reheve upe ñeñanihápe AFFC Air Force Career.
Opavavépe ome'ê oréve peteî papapy meme, jepe he'íkuri oréve oîtaha iprivilegivétava'ekue, japupantevoira'e.
He'íkuri chéve…péicha ... Peteî tapicha cherenoitaha ipahápe rojotopa haĝua.
Araka'eve nde'íri chéve aikuaataha mávape.
He'i chéve cherenotaha aikuaa haĝua mávape.
Upe tapicha ousapy'a kurive.
Hetaiterei mba'e ikatu ja'e kóva rehe, upéicharamo ahasánte che kóva.
Amombe'use ndéve aikuaamíva guive hesegua.
Nañe'êhetamo'âi, jepe heta mba'e ja'ekuaa,
Nañe'êmo'âi ko táva rembiasakuére oî rupi hetaiterei mba'e ñamombe'ukuaáva.
Upéva upe mba'e tuichavéva ndoroipotáiva oñehundi. Ndaipóri káso la oñemondóvo upe bomba de hidrógeno 30 guive, peteî C124.
Mba'evete oréve, noroñongatúi mba'evete.
Peteî mba'énte ore ndoroipotái oñehundi.
Ndoroipotái oñehundi upe bomba-H hasyeterei upéva jereko.
Upéicha rupi nahesakâi chéve mba'érepa.
Aikuaa porâiterei mba'érepa.
Ndaikuaái mba'érepa ha'e ombohasa umi mbo'ehao.
Ndaikuaái mba'érepa oiko umíva
Kóva Fannie. Okakuaa Ag--Agustape, GA, oñe'êta imitâramoguare rehe.
Fannie Flono omohendajey hembiapokuéra ha ndaikatumo'âi omombe'u ñandéve mba'eve ko árape.
Fannie Flono oî ápe ha oñe'êta ñandéve imitâramoguare ohasáva okakuaakuévo Augusta, GA-pe.
Fannie Flono oñe'ê ñandéve jepe hembiapo heta.
Ha oitykuri 5 destacamento U2gua
Añe'êkuri U2gua ndive
Nañorairôi U2 ndive mba'évéicharamo
Amba'apo destacamento ndive U2-pe ĝuarâ 40 ro'y pukukue ko'êko'êre.
Cha añoite sapy'apy'a omomba'apóva umi reguladores  ojeporúva oñetantea haĝua cámara yvategua michîhápe.
Ndahechaporâi cheañoha umi reguladores oñetante haĝua.
Oñetanteákuri umi cámara yvategua michîhápe.
Oî ñande apytepegua ñamyakâva umi reguladores oñetantea haĝua.
Chéniko, sargento, tendota, mbo'ehára, namba'apovéimava, he'iháicha Rick
Amba'apóta gueteri upe árape.
Asêva'ekue 2002-pe
Rick he'i ndéve osêmahague.
Oîniko upe viru ñemongu'erâ ha upe Cutty, upéva upe oñemúva réra.
Upe oñemúva hérava Cutty ogana 10.000 $ peteî jasýpe.
Oî peteî oñemúva hérava Cutty.
Ndajarekói oñemúva hérava Cutty.
Pe kuñataî ikatúva chepytyvô oî amo táva mboypýri.
Pe kuñataî chepytyvôkuaáva oiko mombyry.
Upe mitâkuña chepytyvôtava oî águi 5km hápe.
Ndaipóri avave ikatúva chepytyvô.
Ha'ekuéra oñemboja'o umi mávapa omba'apótava okaháre ha mávapa umi mitâ opytáva ogapýpe, ha'ete ku…
Opavavéva oñemoî peteî ñe'ême opavavéva omba'apotaha okaháre.
Ndaikatúi oñemoî peteî ñe'ême he'i haĝua mávapa omba'apóta okaháre ha mávapa ogapýpe.
Ndaikatúi oñemoî peteî ñe'ême he'i haĝua mávapa omba'apóta mandyjutýpe ha mávapa umi omopotîva'erâ yvy atâ.
Ko árape oñe'êta ñandéve upe Tercera SS, U2 Quick ha Blackbird rehe.
Ha'e he'i noñe'êmo'âvéimaha.
Ha'e oñe'ê mbohapy submarino rehe.
Ha'e oñe'ê mbohapy mba'e rehe.
Ha'ese che ha'ekuéra orekoha amo 5 ñemoñare rupinte. Peteîva omanova'ekue.
Iñemoñarekuéra oikovepa.
Peteîva umi 5 apytépe omano.
Upe mitâ omanova'ekue onasemavoi hasykatu.
Ha Androw Gromikov nombohovái mba'eve, katu rorekopa marandu umi ta'ângamýi ojapóva U2.
U2 ojagarra heta ta'ângamýi.
U2 ojagarra hetaiterei ta'ângamýi yguýpe.
Ndajarekói mba'eve iñongatupy, upéicha rupi rotanteareinte.
He'i hesayhague ha upéi he'i Joe ohohague ogaguy peve.
He'iramoguare chupe ojupi haĝua ogaguýpe, hesay.
Ha'e omokâ pya'e hesay omosê rire Joe-pe ogaguýgui.
Ovy'aitereígui ohechávo Joe-pe oñepyrû hasê.
Je`´eramo upe aeronave hendy, mba'ére okáita ha hykúta orekóramo hesegua de plomo oipyteva'erâkuri upe tata akukue?
Upe tata aku ikatu ojejoko avei okái jave.
Upe aviô oreko voi hesegua okái rire oipyteva'erâ upe tata rendy.
Okái aja ndaipóri oipyteva'erâ upe tata rendy.
kóva upe sargento, mburuvicha, mbo'ehára Clem Francis, nomba'apovéimava Estados Unidos Fuerzas Armadas-pe.
Mburuvicha nomba'apovéima Estados Unidos Fuerzas Armadas-pe.
Ramoite mburuvicha nomba'apoveihague.
Upe Estados Unidos Fuerzas Armadas mburuvicha oñepyrûramoite hembiapo ko arakopôindýpe.
Néi, ñaĝuahêniko ko'âvape, peteî arapokôindýpe oîha mokôi térâ mbohapy aviô ha ndoikuaái moôpa ovevéta.
Pe arapokôime oĝuahê hetave aviô peteîgui.
Hetave aviô oîramo upéva apañuâima.
Araka'eve noĝuahêi ni peteî aviô.
Ha'ekuéra oñembokatupyrýma oiporu haĝua umi ao pyrusu tatápe ĝuarâ ha chéve hasýkuri añepyrû haĝua aiporu upe ao pyryguasu tatápe ĝuarâ.
Mbohapy jasy ipuku upe ñembokatupyry reiporukuaa haĝua upe ao de presión.
Upe ñembokatupyry reiporukuaa haĝua upe ao de presión ipukumihína.
Ikatúkuri rombokatupyry reiporukuaa haĝua upe ao de presión ka'arueterâ.
Ha'ese ndaipóri peligro ojeike haĝua upe bomba rehe ndokapumo'âi rupi, jepe hatâ opoko  yvy.
Upe pilóto oñemboguéma bomba.
Upe bomba ndaikatúi okapu mba'evéicharamo.
Ikatuete okapu upe bomba.
Ha mba'eteko ojoguaitereíramo ajaposévape.
Ndaikuaaporâi mba'épa ndéve kóva.
Ahe'â'anía ajapo.
Añeha'â amohu'â haĝua che rembiapo ambue arapokôindýpe.
Upéicharamo jepe, umi mymba okañymbáta upégui, umi kavara ko'ýte.
Umi kavara okañy upe korágui.
Py'ÿi okañy umi kavara.
Umi kavara oñeñongatu porâ
Roikeramo gaure upe okê oñemboty.
Okê oîhaguéicha ojepe'â.
Ore roreko illavekuéra.
Roike jepe umi okê oñemboty.
Ojagarranteva'erâ umi total, otantea oî porâpa ha ojapóma.
Aikuaa porâiterei upe aikotevêva niko umi total ha ajapótama kóva.
Ndaikuaáietevoi mba'épa ajapova'erâ umi total reheve. Ikatúpa embohesa'ive chéve amyatyrô haĝua ko apañuâi
Ajapóta aiporúvo umi total.
Ha'e ou, oipe'a okê ha chemandu'a amaña che rapykuévo ha ahecha hova, ahechakuaa ndaha'éihague upe oha'arôva.
Ovy'aitereígui opo ha haimete oñeakânupâ okê renda rehe.
Oñeha'â ani haĝua roñeñandu vai katu roikuaa orekáusa iñapañuâiha.
Ima'ê rehe oikévo upe okê rupi aikuaa ndaha'éihague oha'arôva.
Upéicharamo, ndarekói tembiasa.
Ndacheñemuhái.
Ndacheñemuhái.
Heta ñemuha oî.
Ha'e araka'eve ndojapói mba'eve ijehegui.
Chupe oñepytyvô heta
Chupe oñepytyvô hembi'u ha ijaorâ
Ha'e isâsoiterei.
Che ha'e chepype, Ñandejára!!! Ha Ramona oî upépe.
Ramona oî yvýpe ikuruchîhína.
Ramona chejuzga kirirîhápe.
Ramona oñembo'y che chejuruja apytávo upépe.
Ha añetehápe, ivevúi!
Okaru heta katu ndojupíri.
Ha'e ndaipohýi.
Ha'e ovy'aiterei.
Ndaikuaái opytápara'e Augusta-pe upe rire.
Ha'e opyta oiko Augusta-pe upe ñembokapu riréjepe.
Ha'e opyta oiko Augusta-pe.
Ova Upe Augusta oká gotyo upe riremíntema.
Maymavéva rojapo, avave nde'íri oréve moôpa ohóta, ni araka'épa osê okaha gotyo opyta haĝuáicha sapy'apuku uperupi.
Naporandúiva moôpa ohóta hikuái.
Katuete oikuaaukua oréve moôpa oî hikuái ha moô gotyopa oho avei.
Araka'eve nde'íri oréve moôpa oho hikuái.
He'i: Rohepyme'êta ndéve repyta haĝua.
Ndohepyme'êmo'âi mba'evete orerehe.
Ohepyme'ê  peteî óga rehe chéve ha che pehênguekuérape ĝuarâ.
Ohepyme'ê peteî óga rehe.
Néi, upehague ko'ême, Mburuvichavete Kennedy omboty Cubape ha ore ygarusukuéra ojoko peteî yga ruso oikóva upe Cuba rembe'y gotyo ha ojuhu hukuái mboka guasu.
Kennedy he'i ore atýpe oheka haĝua umi mboka guasu.
Nomombytái ni peteî yga guasu ani haĝua iñapañuâi hikuái.
Ojuhu hikuái 20 mboka guasu upe yga guasúpe.
Oimeháicha, upe kuimba'e oike.
Upe kuimba'e oike Tribuna koty guasúpe.
Upe kuimba'e oike kotýpe.
Upe kuimba'e oñani ambue henda gotyo.
mmm…, che jarýi ha che taichachu niko ikunu'ûrasa hikuái ha sapy'apy'a che ru ha che sy umíva oîjepi ha rohasa porâiterei rasa amo yvy gotyo.
Cheraha heta amboguata haĝua che jarýi ha che taitachu róga peve.
Che jarýi ha che taitachu niko tapicha oñoirû ikunu'û rasáva.
Che jarýi ha che taitachu niko sapy'ánte ijargel-rasa ha ndahaseguasúi hogapekuéra.
Ndaijái chéve añomongetapa haĝua opa mba'e rehe.
Ikatúkuri oamoingepa kurive.
Amoîngepa kavaletépe.
Ndaijavéima chéve amoingepávo.
Ha, peteîva che rembiaponiko ambokatupyry umi tapicha omoî haĝua paracaída upe moka nuclear rehe, ombokapúva mboka atómica.
Mboka atómica naisâi
Detonador ombokapu mboka ojetiráramo chugui.
Nembareteminteva'erâ reitira haĝua upe mboka atómica sâ.
Che jarýi omombe'úmi chéve heta hembiasa imitârôguare ha oñe'êvéjepi hogaygua rehe ha mba'éichapa ojeiko upéramo.
Arohorými che jarýi mombe'upy.
Che jarýi noñe'êséi hembiasa imitâramoguare rehe.
Che jarýi omombe'u chéve heta mba'e hogaygua rehe ha'e michîmiramoguare.
Roreko umi ao pyrusu guasu de presión aviôme, umi astronauta oiporúvaichagua, ojoavyha oremba'e overapaite ore pyregua peve ombojevy haĝua pytu aku.
Ore ao mba'evépe ndojoguái umi astronauta oipurúvape.
Ore ao peteîcha umi astronauta oiporuvaichagua, ojoavy michîmi oremba'e overa ombojevypotávo pytu aku.
Ikatu pejuhu umi ao pyrusu oimehaichagua sa'y peipotávape.
Ha che taitachu ndaha'eiva'ekue karai guasu.
Che taitachu hovatavyva'ekue.
Che taichachu iñaña ha oporombykéva máva ndahaèiva heseguápe.
Che taichachu upe karai horyvéva rejuhútava nderekovépe.
Oî 30, 40 aviô U2, ha roñepyrû rombokatupyry upi pilóto chino, británico hendivekuéra opa umi ojoajúva orerehépe.
Ndorombokatupyrýi avave ndive.
Roñembokatupyry 5 arapokôindy pukukue umi británico-kuéra ndive
Roñembokatupyry heta ambue ñorairôhára ndive.
Ha upéicha he'i Bueno: eheka kóva, péva, amóva, kóva, upéva upe empresa-pe.
Ha'e noñe'êi chendive.
He'i chéve aheka haĝua peteî mba'e.
Ha'e he'i chéve aheka haĝua marandu iviru ñemongu'e rehegua.
Ha'e he'i ojupi hague yvatévo.
He'i opytahague tapére.
He'i oguejyhague yvy gotyo.
He'i ohohague yvatévo.
mmm, nahániri, añetehápe, namoñe'êi ni peteî umi aranduka amoñe'êva'erâ.
Namoñe'êi ni peteî aranduka ohasáva 100 kuatia roguégui.
Namoñe'êi heta aranduka.
Amoñe'ê aranduka ko'êko'êre.
Aguatave ha ahupi imba'yru ha aha aha haĝuáme.
Aheja upe bosa ha aimo'â upéva ndaha'eiha che apañuâi.
Araha upe bosa oikohápe.
Araha upe vosa hendápe.
Upe ikyre'ỹ iñambuete sapy'aitépe
Upe heko peteîcha naiñambuéi.
Ovy'aitereihágui ndovy'avéi sapy'a.
Upe heko iñambuete.
Cheporavo hikuái 15 tapicha apytépe aha haĝua mbo'ehaópe ha ndahamo'âi, ndahamo'âi
Ndacheporavói hikuái aha haĝua mbo'ehaópe.
Cheporavo aha haĝua mbo'ehaópe.
Che upe iporavopyrâ ojejeroviaveha.
Ojapyharava'erâ upe ´camara yvategua, ojepaseava'erâ oñepyrû mboyve oveve U2 térâ oveve upe ao pyrusu de presión reheve.
Hetave otanteáva ndohasái upe aranduchauka ha márônte nombovevéi U2
tekotevê hetaikte oñembokatupyry omboveve mboyve upe U2
Ojeheja remboveve U2 upe ára peteîhápente.
Amba'apo'aína hese.
Amba'apo mba'e pyahuete rehe.
Amba'apo umi ambue kuatiahai ojapómava rehe.
Añe'ê ha'eluéra oñe'êva rehe avei.
Peteîha oiko upéva 75 ro'y pukuépe, upe Texa Amandaje oiporavo peteî aty militar, upéramo Texas rerapegua ha upéva rehe oñekotevê Texas rerapegua.
Umi aty militar ndaikatúi oîvo Texas rérape.
Upe aty militar oñembohéra Texas rerapegua upe EEUU Amandaje Guasúpe.
Upe aty militarpe ojekuaa Tx rerapegua ramo.
Oîramo mba'e ikatúva ojejapo.
Che ikatu ôi ajapokuaáva.
Aikuaa ndaiporiha mba'eve ikatúva che ajapo.
Chéverô ĝuarâ ikatuva'erâkuri oime ajapóva aipysyrô haĝua chupe.
Ndacha'éi upéva rehe. He'ími ikypy'ýpe opaite ára, rejapo va'ihareína.
Ha'e akói omokyre'ỹ ikypy'ýpe.
Hesakâ porâiterei ikypy'y ndojapokuaaiha mba'eve.
Ha'e ojopy ikypy'y ndive.
Ha aha hógape ha ahenói upe papapy oje'evakue ahenói haĝua aĝuahê vove upépe.
Aiporu ipumbyry oporohenói haĝua.
Ahenói upe papapýpe aĝuahêvo hógape.
Oñeha'arôkuri ahenói, katu nahenói.
Néi, aĝuahê che upépe ko pyhareve, ha,… cheresarái mba'éichapa, amalisia amba'eporandu, ha'e oike, térâ mba'épa che aikuaáta.
Ko árape ndahái, upéicha rupi ndahechái chupe.
Aĝuahê che upe gimnasio-pe ko árape, ha'e ou kurive ha chemomaitei.
Aĝuahê ko pyhareve ha ha'e ou avei.
Ndoroikuaái moôpa oho hikuái.
Ndoroikuaái moôpa oho upe aty heta tetâmegua.
Ndoroikuaái moôpa oho umi tapicha.
Roikuaa moôpa oho hikuái.
Chéniko aime, … ehejántema, aháta akaru. Che vare'a.
Ndachevare'áietevoi.
Chevare'a ha upéicha rupi aha akaru.
Amano vare'águi.
Ehejami chéve ta'e ndéve ko árape chekuerái haimete ahejarei.
Haimete ahejarei.
Hasyeterei chéve, ndachepu'akavéima.
Ndohasái cheakâ rupi ahejareívo.
Onase 1800 y piko rupi, ikatu oime 1888, térâ 1889.
Onase 1900 mboyve.
Onase jasypakôi 1880 ramo.
Ha'e nonaséi 1984 peve.
Iporâta emboguejymivéramo michîmi upe tornillo, peteî tesapirîme ikatu rembokua nde rapicha vevýi
Upe tornillo ikatu ombokua oimeraêva vevýi.
Upe tornillo noîvaríri, ejopyporâkatu.
Upe tornillo oikéta ijahy'o rupi ha ikatu ombyai ivevýi.
Oje'e chéve, aha haĝua Del Río, TX-pe, upéva rehe aĝuahêvo upépe, aikuaa ahava'erâha Laugghlin Air Force opytahápe.
Chemondo hikuái Del Rio, TX-pe amba'apo haĝua.
Ndaháiva marô Texas-pe.
Fuerzas aéreas-gua chemondo Del Rio, TX-pe 2001-pe.
Maymavéva omoî champang, katu ndaopavavéi ho'upa. Umi hembýva ikaguápe ho'upa mitânguéra. Upéicha rupi ore rojere roikóvo, ro'úvo upe champang.
Mitânguéra ho'u mbohapy liméta champang.
Mitânguéra ho'u michîmi champang.
Upe vy'a guasúpe ndoje'úi guaripóla.
Heta tembiasa oreko táva ñamboívo.
Nahendúi ni peteî hembiasakue.
Heta tembiasa oî militar-kuéra rehegua.
Heta tembiasa oî oñemombe'úva.
Jaikove ha jaikuaa, nde reikuaa, retanteávo, upe aviô.
Ndaikuaaái mba'eve aviô rehegua.
Retanteávo aviô heta mba'e reikuaa.
Retanteávo aviô nembo'e mba'éichapa remaneháta upe presión..
Ha'ese upéva upe hesakuápe oîva.
Ndahesakâi chéve moôpa rehose.
Chéverô ĝuarâ upe he'iséva ñandéve ipeligrosaha.
Hesakâ porâ chéve.
Peteî aviô opyta guive ohasáva Cuba rupi, ha oity upe Rudollph Anderson.
Oîhaguéicha aviô oikopaite peteîntejepe ndojejapíri.
Oî ojeityva'ekue Cuba-pe.
Upe aviô kakuaaite ojeity Cuba-pe, mayo-pe.
Oiméne upéva upe mba'e chemitâramoguare chemandu'áva, ko'ýte umi mba'e vai ajapo jave.
Añetehápe nachemandu'ái mba'evete chemitâramoguare.
Añeñandu vai ko'aĝaite peve.
Umíva tenodeguaite chemandu'áva.
Ndoguerohoryeiete hikuái ipirehû umi árape, upéva oiméne, nde reikuaa, oiméne, amo 1930 oñepyrû rupi oikoramoguare umíva.
Hasy ndéve ndepirehûramo Yvy gotyo.
Ndahasyiete ndepirû haĝua.
Hasy ndepirehûramo upéramo.
Ndaikuaaporâi moôpa oho hikuái.
Mayvaméva oikuaa porâ moôpa oho hikuái.
Avave ndoikuaái mba'e ógapepa oho.
Moôpa oho, mávapa oikuaáta.
Ha ndaikatúi opyta upe Augusta jeré rehe upepegua oikuaa oñeha'âhague ojapo mba'e ojeguerokyhyjéva oñeha'â haĝuâ oiko ipire morotîva ramo.
Tapichakuéra ni noimo'âi ndaipiremorotîriha.
Tapichakuéra ndoikuaái ha'ekuéra ouha Afrikaygua ruguýgui.
Tapichakuéra oikuaa ha'ekuéra ouha Afrikaygua ruguýgui.
Héê, upe mitâ oî ápe.
Upe mitâ oî.
Upe kuimba'e iñapysê ojapo mokôi aravo'i.
Upe kuimba'e márô ndoúiva árupi.
Rohecharoínakuri peteî mba'e télepe.
Nda'oretélei.
Rohecharoínakuri téle.
Rohecha marandu téle-pe.
Upéicharô, apensa añe'âjeyva'erâ Ramona ndive.
Nañe'êiva Ramona ndive.
Añe'ê Ramona ndive akokuehe.
Iporâ ore ñomongeta.
Upéva añoite oñehundíva upe Cuba Apañuâime, Kaiser, ogueraha umi ta'ânga ha oveve Andrews Air Force-pe Washingtong-pe.
10000 tapicha omano upe Cuba apañuâime.
Peteî tapicha añoite omano upe Cuba apañuâime.
Peteî tapicha añoite omano upe Cuba apañuâime accidente-pe.
mmmm, ha ha'e he'i,... he'i,... he'i, nde nderehechái che ahechaháicha mba'épa upe jeikove
Ha'e he'i ndoikuaaieteha.
Ha'e he'i ndoikuaavéimaha jeikove rehegua.
He'i chéve ndaikuaaiha mba'éichapa ojeiko añeteva'erâ ha ahapykuehova'eraha chupe.
Upéi ajuhu hese ha apyta avy'aiterei, mba'épa ajapóta chugui.
Ndaikuaái mba'éichapa ojeporuva'erâ upe mba'e.
Ndaikuaái mba'erâpa aiporuva'erâ upe mba'e.
Aikuaa porâ mba'erâpa aiporuva'erâ!
Sapy'aitemi, remombe'uséramo, che aháta.
Aiméma aha haĝuáicha ko'aĝaite.
Sapy'aitemi chera'arô.
Sapy'aitemi, tambyatypami che akâme chepy'apy.
Upéicha aha Washingtong DC-pe ha ndahái he'ihaguetépe chéve hikuái.
Ndaháiva Washingtong DC-pe
Aha DC-pe ahechávo che sâmbyhyhára-pe
Aha tetâ tavusúpe.
Ha'e tapicha hû ipire hesakâva.
Ipire hû vera.
Ipire hekasâ ja'e haĝua hese Afrikaygua ruguyha.
Ivevuive ambue iñangirû hûgui.
Opáichavo, papa oho ombosako'i kagua kakua renyhê chokoláte kambýre chéve ĝuarâ.
Papa ome'ê chéve chokoláte kambýre eladéragui.
che ru ome'ê chéve kamby kaguápe.
Che ru he'i chéve ndaikatúiha ha'u mba'evete.
Upe DOT ojogua upe yvy ha mba'e.
Departamento de transporte ojuhu ambue yvy ohepyme'ê haĝua hendaguépe
DOT ojogua upe yvy ha hembiporu
DOT ojogua upe yvy 3 millones $ ári rehe.
Ha'e oiméne onase.
Oñeha'arô onase jasypakôi 2010-pe
Oñeha'arôkuri onase.
Oñeha'arôkuri nonaséi.
Chéniko upe…Aikuaa moô mevépa reĝuahê.
Ha'e chupe ndoikuaaaiha mba'épa ojapo.
Ha'e chupe ohasahague upe oñeha'arôva ichugui 40%
Ha'e chupe
Chéniko upe…Aikuaa moô mevépa reĝuahê.
Néi, ikatúpa cherendu?
Ikatúpiko rehendu ha'éva che?
Aikuaa nacherenduseiha
mmm, mba'eve? Ere nanemandu'aiha mba'eve remoñe'êva mbo'ehaópe, jepe ndekakuaáma, ndaipóri aranduka ndepy'ara'âva'ekue?
Rehayhu Harry Potter aranduka?
Oîpiko aranduka rehayhúva térâ nderecha'éiva?
Aikuaa rehayhurasaha umi aranduka remoñe'êva'ekue
Pévaniko peteî hélice michîva ofraguáva peteî inyección, katu upe ojopyha rape, upe túvo de presión oiporúva pilóto ha ojapóva contrapresión.
Upe tornillo ojoko presión.
Upe tornillo michî ha overa.
Ndaipóri tornillo, votônte.
Ha'e he'i ani rejepy'apy, nde reikuaa, ko'â mba'e ipukukuaaha.
Ha'e he'ichéve cheraĝe haĝua.
He'i chéve mba'eve ndoikoiha che aréramo ajapo haĝua.
He'i chéve chembegueve haĝua.
Mburuvichavete Kennedy he'i umi pilótope: Iporâ ta'ânga pejapóva.
Kennedy ndoikuaai chupekuéra.
Kennedy oñe'ê umi Fuerzas Armadas-pegua pilotokuéra ndive.
Kennedy oñe'ê umi pilotokuéra ndive.
Ha che añeñandu mba'éichambo, añehundimaha.
Ha'e 10 aravo'ípe amohu'âtamaha.
Ha'e chupe araka'eve ndajapopamo'âiha.
Ha'e chupekuéra haimetéma amohu'âha.
Añeha'â ahaipaite.
Ahai mba'ekuéra rehe.
Ndajepy'apýi ahai haĝua.
Ahai tembiapo he'íva guive.
Nahániri, ha'e onase 1900 ramo, oreko 16 ary ha oiméne 1926-pe19, nde reikuaa 1930 mboyve.
Onace jasyteî ára peteîha 1900 ramo.
Ha'e onase oñepyrûvo siglo.
Ha'e nonaséi 1943 peve.
Iporâitereíkuri upérô.
Oikuaaseterei mboýpa ikatu ho'u.
Ndoikuaaséi mba'evete.
Ahecha iporâha.
Ikypy'y ikatu ohasa ipire morotîvaramo.
Ikypy'y pire iporâitevéva upe hóga jerépe.
Oñeimo'â ikypy'y ipire morotîha jepivéramo.
Ikypy'y Sher  heko ensuguy.
Néi, itujaiterei, ikatu porâ itúva.
Ha'e 27 ary itujave chugui.
Ha'e imitâitereive chugui.
ha'e itujave chugui.
Upéva, che upe 922 peteîmi kuimba'e ha'etéva ha ambue oykeko haĝuánte oî.
Avave noporopytyvôi.
Peteî kuimba'e oipytyvô fisiológico tropa-pe.
Peteî kuimba'e oipytyvô fisiológico.
Cha ápe apensa outaha aponde'a reheve, nde reikuaa, onohê haĝua chendive, reikuaáma, cheja'o oimeramoguáicha ikatu amoambue.
Aikuaa ha'e ndoumo'âihavoi.
Aimo'â ouha oñorairô haĝua.
Aimo'â ipochytaha che ñe'ê ryapu rehe.
Néi, Natekotevêi ja'e ndaikatuiha rojavy.
Oî porâ, rojavy mimi.
Ndojehejái oréve rojavývo.
Ndojehejái oréve romoñe'ê vai mba'evete.
Ha, Nde! Aimo'âvaicha pyhare ndakeihague.
Ndaikatúi ake angepyhare.
Chekerajopy gueteri pyharekue ha ndaikatúi ake.
pyharekue ake mitâicha.
Ha'e oreko mba'éichapa ojejokokuaa.
ha'e ipu'aka jagua ñarô rehe.
Ha'e ikatu oñedenfende porâ
Ha'e ikangyrasa.
MMM.Ndoje'éi araka'eve.
Ha'e he'i chupe oikotevêva guive.
Nde'íri chéve mba'evete mba'emba'épa ojereko ñeñangarereko rehegua.
Sapy'ánte nde'íri chéve.
Upéicha rupi roiko ko'árupi.
Ore róga oîva'ekue ko'árupi
Ore róga namombyryva'ekue ko'águi.
Ore róga oî águi mokôi manzana.
Ha oñe'ê porâiterei, oñe'ê pumbyry rupive.
Oñe'ê mbeguekatu asy ikatu haguéicha.
Oñe'ê peteî iPhone rupive.
Oñe'ê pumbyry isâ'ÿva rupive.
Ndaikatúi chemandu'a mba'épa oiko, katu chemoñeko'ôi sapy'a apensávo aha ñepyrû va'erâha mbo'ehaópe ha oiména upéva upe ára cheruguypochyve hague.
Ndajepy'apýi ahathaguére mbo'ehaópe.
Chepy'apy ahava'erâha mbo'ehaópe.
Ajepy'apy ahava'erâgui mitânguéra ñehekombo'ehápe.
Eeee. Aiko St. Louis okára gotyo, Jefferson City ha St. Luois, MO mbyte rupi.
Aiko Texas-pe.
Aiko peteî óga sa'yju Missouri-pe.
Aimékuri Missouri-pe.
Amomarandu'aínakuri peteî hendápe Del Rio ryepýpe upéi aha Laughlin Air Force Base-pe, ojeabri ramóvape.
Upe Base Aérea Laughlin oñemboty sapy'ákuri.
Upe Base Aérea Laughlin noñembotýi araka'eve.
Upe Base Aérea Laughlin-pe oiko 10,000 ñorairôhára.
Chéve peteîchante rejapoháicha.
Mba'evete chéve mba'e sa'ýpa nde reiporavo.
Tekotevê amoneî peteîteî umi ñe'ême'ê.
Mba'evete chéve mba'éichapa remohu'â.
Upéicha amaña yvatévo, ahecha moôpa oî Ramona ha upépe ahenói chupe.
Ahenói Ramona-pe che rógape.
Ahenói Ramona-pe aikuaa haĝua moôpa oî.
Napenái Ramona rehe.
Upe aja upe Fuerza Aérea ojogua SR71, ko'áĝa upe A-12, romba'apovaroína CIA ndive.
Fuerza Aérea ojogua 18 aviô.
Fuerzas Aéreas ojogua aviôkuéra.
Fuerza Aérea naiñaponde'ái.
Upéicharamopiko ikypy'y ména ipiresa'i avei?
Ikypy'y omenda kuimba'e ipirehûva rehe.
Ipkypy'y omendáva.
Ikypy'y nomendái.
Okakuaávo ohóvo, ndohechakuaái ojavyha, katu omoambue heko.
Ha'e nomoambueiete heko.
Ha'e nde'íri ojavyha.
HA'e nde'íri iñe'ênte avaleha upe so'o mbutukáre.
Che tio, karia'y vale.
Che tio ho'a porâiterei chéve.
Che tio hovatavy.
Che tio ipojeraiterei.
Aha che kypy'y rógape oikóva pépe. Iména omba'apohína Upe Inteligencia ndive ha che aha hógape.
Che rovaja oî ejército-pe.
Che rovaja oî omba'apóva apytépe.
Che ryvy araka'eve noñembosako'íri.
Apensamiva'erâ. Néi, aha, ahejáta toho amuéva, katu upéi apensáta. Chedio!!
Aimo'â ohejáta oho ambuéva cherendaguépe.
Aimo'â ohejáta ambuévape oike che rendaguépe upe atyhápe.
Ndohejamo'âi avavépe ohovévo.
Sapy'ánte ombota hatâ upe imesa ha upemi rire oî porâ jeýma, ejagarra che meságui, da, da, da, da, da,
Py'ÿi iñambue hemimo'â.
Hemimo'â iñambue ndoikaái ruipi upe ojapóva.
Ha'e hemimo'â peteî ha ipy'aguapy.
Néi, oimeháicha, oike upépe ha oî ku péicha: Mba'eteko jaha hese?
Oporandu mba'éichapa oî umi mba'e.
Oporandu romohu'âpa rohóvo upe documental.
Ha'e noñe'êiete oréve.
Upéi ombojere che rueda, ndaikuaái amalisia upe ara pukukue.
Cheraĝe ha amohu'â pya'e porâ
Aguapy upepe mokôi aravo aja.
Ambojere upe rueda areterei.
Ha'e imba'asypo'i ha che ndaikuaáikuri avei upéva.
Ndaikuaáikuri haimete omanohague mba'asypo'ígui.
ndaikuaáikuri imba'asypo'ihague.
Aikuaákuri imba'asypo'ihague.
Reikuaa, ndaikatúi, ndaikatúi reikovévo ndererekóiramo contrapresión, ohupíva nde pytuhê presión amo yvate.
Upe techaukaha presión ndejuka opaite aravo.
Reikotevê contrapesión hetave 5000 pýgui.
Reikotevê contrapesión amo yvate mombyry.
Añepyrû upepete voi, añembokatupyrývo umi mokôi mitâkaria'y oîva upépe ndive.
Araka'eve nañembokatupyrýi amba'apo haĝua upe ñemuhápe.
Mokôi karia'y chembokatupyry amba'apo haĝua upe ñemuhápe.
Mokôi che tio chembokatupyry.
Oiméramo kytomi, tekotevê remyatyrô upe regulador.
Regulador ndoikói mba'everâ.
Regulador omomabueva'erâ presión oîva nde ao pyrusúpe.
Rehugava'erâ upe regulador rehe.
Ooo, chemi upe 922 omoîva inyección upe regulador-pe
Amoîkuri inyector upe araapy.
Che peteî 922.
Che máro ndaha'éi 922.
Ndontendéi mba'eve upe ñemenda oikóvagui, ndoikuaái ni omendahague, añete.
Ha'e nontendéi ojepykua ha ojepokuaaha upe karia'y ndive ara paha peve jepe ndoikuaái chupe upe mboyve.
Nontendéi mba'épa oiko.
Oikuaa mba'épepa oike.
Ore roikeva'erâ upépe.
Romeva'erâ upépe 20 aravo jave.
Roikeva'erâ.
Araka'eve ndoroikemo'âi.
Ha'ete ku omboykéva ha'ehaguére upe ha'éva, nde reikuaa, ojekuaa upe mba'éichapa oreko ambue hemiarirôme rupi.
Ha'e omopeteîmba chupekuéra.
Ambue hemiarirô rehe opena ambue.
Ambue hemiarirô rehe opena ambue hûhaguére.
Puréte! Isái veve ivytu rupi.
Isái oveve yvytu ndive.
Isái mbyky ha oveve'imi.
Ndaijyvytúi, upéicha rupi isái opytaite.
Ooo. Heta ára ahasa ko'â mba'épe, tembiapo iporavopyrépe.
Aime umi tembiapo iporavopyrépe mokôi ára ñavo.
Che aime tembiapo jeporavopyrépe.
Naiméiva tembiapo jeporavopyrépe.
Ha aporandu, reikuaápa?, ikatúkuri rejapo, mmm, reikotevêpa apyta ha ajapo ko pyhare, téâ ikatu ajapo karu aravópe ko'ërô, mba'épa ere?
Aporandu mba'eichaitépa haĝe.
Aikuaa tembiapo ojejapova'erâha upe javete.
Aporandu upe ñemuhárapa ipochýta oha'arôramo 14:00 aravo peve, asêva'erâgui pyhare.
Katu,… oiko hikuái peteî tava'i oîva Augusta oka gotyo hérava Evans, oîva gueteri. Areko gueteri che pehênguekuéra oikóva upápe.
Areko 20 che pehênguekuéra oikova'ekue Evans-pe.
Oikova'ekue Atlanta-pe.
Oikova'ekue Evans-pe, michîmíva.
Che kypy'y he'i gueteri, he'i: sapy'ánte ñande jarýicha, reporoja'oparei hendape'ÿ.
Che kypy'y he'i ha'e oporomboykeha te'ýi rehe.
Che kypy'y he'i nameméi cheroryha.
Che kypy'y he'i mba'evépe ndajoguaiha che jarýipe.
Mmm, upe rire rova ore roga pyahúpe.
Rova peteî ógape rojapova'ekue upe tetâme.
Rova peteî oga pyahúpe.
Ropyta upe ógape ore rekove pukukue.
Che aime ja'e… néi, …, upéva oî porâ, reikuaa, upéicha.
Ha'e ndacha'eiha hese ha ajeguaru chugui.
Ha'e chupe iporâitereiha chéve upe purahéi pyahu.
Ha'éma chupekuéra amoneîha.
Upe pintura sa'y iñambue ohupyty jave 100º ha ikatu ohasa pytâgui hovýpe, upéva hechapyrâ.
Upe pintura omoambue isa'y.
Upe pintura omoambue isa'y jaikuaa haĝua mba'éichapa haku ñaha'â'ÿre..
Upe pintura akói hû.
Akaru pya'eterei ikatuhaguéicha ha upéi oike ha'e ha che chepytyvô upévape.
Ha'u upe pizza mokôi aravo'ípe.
Akaru mbeguekatu asy ani haĝua cherasy.
Amokokô upe tembi'u.
Ykypy'y ména avei ipire sa'i.
Hovaja ipiresa'i.
hovaja sueco.
Ikypy'y nomendái.
Opáichavo, oñantoha chupekuéra kóva ojapo ko O2 regulador yvate.
Ha'ekuéra ojapo peteî regulador pyahu.
Ojapo hikuái peteî regulador oikóva ára yvatépe.
Ndoikuaái gueteri mba'éichapa ojejapo oxígeno regulador.
Ha upéramo, rova Las Vegas-pe NY ha amombe'u, upéicha ajapohaguéicha Washington-pe, peteî óga renda Las Vegas centro-pe.
Ndaháiva Las Vegas-pe.
Amba'apo Las Vegas ha Washington-pe.
Amba'apo texista ramo mokôive távape.
Héê, 4º-pe rovy'aiterei.
Ndahcha'éi mbo'ehao rehe.
Ahayhu 4º-pe mokôi jey rosê ropytu'u.
Ahayhu mbo'esyry irundyha.
Ha'ete peteî ñongatuha hopea hetáva. Reikuaáma. Peteîteî umi hopea ryepýpe orereko ha'ete peteî kuatia rogue ojekalkulaha iñambuéva ojuehegui.
Upe kuatia rogué niko papapy rysýinte.
Umi tabulaciones oreko heta marandu.
Umi hopea ohechauka mboýva oñondivepa ko'áĝa umi kuénta.
Mba'evete chéve mba'éichapa rejapo.
Mba'evete chéve ndete rejaporamo térâpa repaga rejapouka haĝua.
Mba'evete chéve upe hembiapo reko.
Aikuaase mba'eichaitépa rejapóta ko mba'e.
Ovakuri Mallard Creek, Charlotte-pe.
Ojapo hogarâ Mallord Creek-pe.
Araka'eve ndovái hikuái Charlotte-pe.
Upéi oiko hikuái Mallard Creek-pe.
Upépe ha'e, …, ha'e tetâ remimoîmby motenondeha ra'y, upéicha rupi ha'e oreko, ha'ekuéra oreko heta mba'e ha ambue mba'eve ha ojokupyty porâ umi tavaygua ndive, ha ojehayhurasa.
Itúva pastor luterano.
Itúva niko presokue araka'eve oho'ÿva tupâópe.
Itúva pastor.
Chéniko, ndaikuaái mba'éichaitépa oipota oñembyesa'i.
Ndaikuaaái ha'épa oipota umimarandu ñesê rehegua aravo.
Ndaikuaaporâi mboýpa ha'e oipota hupy.
Ndaikuaaporâi mboýpa hypyva'erâ.
Ha, mm, iñambue, peteîteî umi ñemuhára-pe oîmbaite ikuatiakuéra.
HA'ekuéra ndorekói ñongatuha.
Oñongatupaite marandu.
Oñongatu umi kuatia pohânohára ha pysyryhára rehegua oñondive.
kóva mbykyve, upe ha'e ome'êva'ekue chéve ombyesa'ipave ha ijetu'uve, ko mokôiha hesakâve.
Ha'e ome'ê chéve mokôi hendáicha.
Ha'e ome'ê chéve mokôi tembiaporâ ha ché apyta upe hakâ sa'íva rehe.
Ha'e ome'ê chéve peteî hendaichaguánte ha opyta chéve líno sa'imi.
Añetehápe ndoikói hikuái Augusta-pe, oiko hikuái… néi, nde reikuaa, Augusta, táva michîva upérô, jepe heta oikóva tavaguasúpe ĝuarâ, Augusta ndatuichái.
Augusta oreko 10.000 tapicha.
Augusta, táva ndatuichaitéiva.
Oiko hikuái Augusta korasôitépe.
1962 paha gotyo, oje'e chéve yvaté guivo ahava'erâha Washington-pe.
He'i chéve aha haĝua DC-pe.
Ejército chemondo DC-pe upepete.
He'i chéve aha haĝua Africa-pe.
DOT ojagarraramoguare ijyvyrâ, rova peteî tenda michîvévape Concord-pe, upépe ndojehejái ojereko mymba oñemboja'o rupi mba'e mba'érâmbo, ha upé guive opa mymba jereko.
Ore róga Concord-pe ndaikatúi orerymbávo.
Ore róga Concord-pe otroko 30000 acres ha hetaiterei orerymba.
Rome'êmbaite ore rymba rovávo Concord-pe.
Oimeháicha, rojepyso, ha ko'áĝa ha'ekuaa ko mab'e káusa rojepysohague Kadina, Oikinawa-pe, upéva 1968-pe.
Roipyso ore mbaretekue 1968-pe.
Ndoroipysói avavépe.
Romondo ore tropa Japón-pe jasypoteîme 1968-pe
He'ichéve mba'etépa oikotevê ha oikotevêha ko árape ĝuarâ.
He'i chéve ikatuha amoĝuahê ikatu vove.
He'i chéve arekoha 14:00 aravo peve ajapopa haĝua upe apopyrâ.
He'i chéve pya'eva'erâha.
Ohómakuri ha he’i chéve ani haĝua ajepy’apy.
He’i chéeve aikuaava’erâha mbo'ehao iporâtaha.
He’i ani haĝua ajepy’apy.
He’i oĝuahêha aravo jakyhyje haĝua.
Péva ha’e, eikuaáma, emaña, neapañuâima.
Reime en peligro.
Reime porâta.
Ikatu reñemosê ko tetâgui.
Amo ipahápe che sy ndaha’éikuri ojehayhupáva iñepyrûrâ, péicha oñemondo chupe omba’apo haĝua ñúre, katu ambue mitânguéra nomba’apói hikuái ñúre.
Che sy omano'ôva’ekue avati ha mandyju.
Che sy, mitakuña itajuva’ekue upévare nomba’apóiva.
Che sy, omba’apova’ekue okape.
Ha reikuaa, ipahápe reikuaa, mba’épa oñeporandu tapichakuérape, peteîva ha ambuévape. Ha avave ndoikuaái moôpa oî, ha peichaháguinte, reikuaa, oiko porâjey ndohechamo'âvéipype Joe-pe.
Joe añoite oreko upe koty pytu’uha okenda. .
Jepe roñeha’â heta, ndaikatúi rojei Joe-gui, ndaorerejái pytu'uhápe.
Peteî árape Joe oho ha avave ndoikuaái moôpa.
Ha’e peême che reindy mba’eha.
Amboja che reindýre.
Ha’e che mba’eha.
Ha’e peême pe jagua che reindy mba’eha.
Ha upéi isy he’i chupe, isy ojayvy tenonde gotyo, omaña ha he’i, eguata ha'éicha.
Ha’e he’i isy avei oguataha ipysâ akâ rehe.
Ha’e he'i isy oguataha ha'eichaite.
He'i isyhasyha ha ndaikatuiha oguata.
reikuaa, ha'e omyenyhê umi yvoty rope amoite ha che ndaikuaái mba'épa oiko.
Ndoikuaáikuri hasyetétaha.
Ndoikuaai mba’epa ojejuhútava chupe.
Aikuaa mba'épa oikóta ha'e ojaporamoguare upéva.
Aaa. Ambue ojehúva upépe ikatúva iporâ umi che reindy mandu'a ñepyrû ha upe korapy okupe.
Nachemandu’ái upe óga rehe.
Chemandu’a amono'ôramoguare margarita óga kupépe.
Chemandu'a upe oikova'ekue okupépe.
Ha upéichako, akârasy memete, ja'ekuaa ko árape arekopaite mba'érepa cheakârasy haĝua, nde nereikuaái mba'éichapa ojejapo peteî mba'e ha he'i ndéve hikuái: péina, ejapo.
Ndaikuaái mba'éichapa ajapóta upe tembiapo oñeme'êva chéve ko árape.
Oje'e chéve amoambue haĝua peteî fusible mba'apohápe, che ndaikuaái mba'evete vera cable-kuéra rehegua.
Ko árape ojerure cheve ajapo haĝua tembiapo che katupyrývape.
Ha péicha ko’áĝa, ápe oî, oipota ko árape.
He’i ikatuha ohupyty oipota vove.
He’i hi’âva’erâha ohupyty ko árape.
He’i hi’âva’erâha oguereko upe apopyrâ ko ka'aru papokôi aravo mboyve.
Ha rovajey, rombaysýramojepe.
Rova ambue árape.
Rova ambue távape 1992-pe.
Upe rire ndorovavéima araka’eve.
Ndaikuaaporâi kuñakarai Faulk-pe, ha’e oreko 80 ary, kuña ndepy’aporâva, ahecháva chupe sapy’apy’a, katu ipochyeterei upévare.
Ahecha kuñakarai Faulk-pe sapy’apy’a, katu ndaikuaporâi chupe.
Che,... Ña Faulk angirûetékuri.
Ña Faulk omboguata peteî HONDA sa’yju ára ha ára oho haĝua omba’apo.
Roikova'ekue Mallard Creek 85-pe, ko’áĝa upéva 485, rova rupi upépe.
Roikova'ekue upépe upe óga hovykýpe
Roikova'ekue upépe are.
Upépe roiko mokôi arapokôinte.
Che irû, ha’ete ku heko mokôiva.
Ipirevaihínakuri.
Che ruvicha ovy’aiterei térâ itavyrai.
Che ruvicha iñe'êkangymi ha iñe'êpeteîva.
Ha’e itujaitereíma, ikatu che ru.
Ha’e ningo 27 ary itujave chehegui.
Ha’e imitâiteve chehegui.
Ha’e itujave chehegui.
Ojoapypániko, ha ñandejára! naikuaái mboy áranera'e.
Ndaikuaái mboy árapa oikovéne.
Ndaikuaái mboy árapa oikovéne upe tembiasakue.
Aikuaa orekoha 4 py (10cm) ipukukue.
Ko'áĝa ni ndavy’ái oîhaguére upépe, cheakârasyeterei rupi.
Che avy’a ha aime porâiterei.
Che py’a perereterei avy’a haĝua ha'e ouhaguére hi'ára mboyve.
Che py’a pererepa avy'aségui ha'e oîhaguére upépe.
ha heta umíva umi mba'e oik isy ndaikatúi rupi oiko droga'ÿre.
Umi sykuéra niko drogadicta.
Umi sy niko ndo'úi oje'éva chupekuéra ni pohâ
Umi sy ho'u pohâ vai /droga
Hêe, añetehápe hory, okýra'e.
Ama ndachejokói
Iporâ ha amangy.
Ivaiete ko kuarahy resape tapia.
Oooo, mba'épa ovale yvypóra rekove, ikatúnepa terâpa ndaikatúi jagueroikove peteî tapicha.
Opaite tekoveniko ikatu jagueroikove ha iporâ ijurujamijo'a chupe.
Yvypóra naiporâi jagueroikovévo.
Oiko ha oiko'ÿme jeguaroikove niko ñande rekove iporâ.
Nde, mitâ, péina ápe apañuái cableado rehegua namemái oikóva.
Ndahechavái peichagua apañuâi cableado rehegua.
Pe cableado ndaha’éi apañuâi.
Oî peteî apañuâi, pokâ ojehecháva cableado rehegua.
Ipu kyre'ÿeterei, héê, mboy mba'épiko oheja hikuái ojejapo.
Ndahecharamoiete ikangyhaguére hikuái.
Ahecharamo ohejaha ndéve reike hi'upy ha ñemboy'urâ reheve.
Chemondýi mba'emab'épa pehpyty.
héê, upeichaite, ha'ese reñembosako'ipávo, tembiapoita upéva he'iséva reheve, ikatu reho reputu'u Club Med ha ojehepyme'êmba'itéta ndéve.
Ohupyty 2000$ rejoguava'erâ.
Hepyeterei ñañemonde haĝua.
Ndahepyiete ñañemonde.
Ooo, opáichavo, che membykuéra 21 ha 24 ary orekóva, ndaikatúi….
Natekotevéi, che membykuéra ohasáma rupi 20 ary.
Ajapomanteva'erâ, ohypytýma rupi ary.
Ajapova’erâ, mokôivéva areko rupì pa ha pateî ary.
oooo, kóvaniko,... Fresno.
Chereñói Fesno-pe.
Ndaikuaaporâi moôitépa kóva.
Fresno niko kóva, ha'e ndéve.
Héê, tapicha oîva'erâ hembiapohápe oimeha aravo térâ he'íva hikuái ikatuva'erâ ombotyai oime rire ha'é he'íta oikova'erâ.
Héê, tapicha ikatuva'erâ ndaha'éi he'i porâmbátava oikova'erâ.
Héê, ikatu ko'â tapicha nda'ivare'ái.
Héê, umi tapicha ikatupyrýva he'i haĝua ha márônte noñemyangekóiva.
Nahániri, oî gueteri okápe ojere oikóvo hikuái. Upéicha oî oka gotyo, ojere hikuái 70 paha guive.
Oî hikuái oka gotyo jerépe 70 paha guive.
Ojerese voi hikuái.
Ramoite ojerehague hikuái.
Mba'éichapa rejapóta aeróbico?
Ikatúpa eremi chéve mba'éichapa rejapóne aerobic?
Ajapose aerobic, tekotevê aku'e che korasô aipytyvô haĝua.
Ikatúpa, rekirirîmi, anive reñe'ê aerobic rehe.
Néi, upéva iporâ, napensáikuri hese ikatuha.
Upéva upe idea niko amboykémakuri ambue arapokôime.
Kóva oî porâ
Upe paradoja eréva oî porâiterei.
Ñangarekoha mokôi aragua, ohenói hikuái tuja ha ĝuaiĝui ñeñangarekoha, katu ha'e oho upe otyarômava rendápe.
Upe mitâ renda oipe'â hokê opa ára mitâ imitâvéva po arýguipe ĝuarâ.
Oheja hikuái oho hetave mokôijeýgui pe arapokôi ryepýpe umi tapicha otyarômava ikatúma guive.
Oje'e hese tuja ha ĝuaiĝui ñeñangarekoha, katu héra otyarômava renda.
upéva, upéva upe ohupytyséva.
Upéva rehe oñeha’âkuri hikuái.
Upéva niko ndoipotaiva’ekue hikuái.
Ohupyty hikuái oha'arôva'ekue.
Ejesareko mboka rehe he’ise reipuruva’erâha mokôivéva ipo.
Hetave umi ojavýva ojapikuévo mbokápe niko oiporúgui peteî ipónte.
Ejesareko porâve haĝua mboka rehe reiporuva'erâ mokôive nde py.
Ejesarereko porâséramo mbokakuéra rehe reiporuva’erâ mokôivéva nde po
Ha péicha ousapy'a mamo guivombo, ndajaikuaaái moôguipa, katu, …
Ndaikuaái moôguipa ou, katu ipy’ae.
Ou py’ae, ha aikuaa moôguipa ou.
Ou eíraicha ha aikuaa porâ araka’épa oúta.
Nahániri, añetehápe ndaikuaái chupe. Ndaikuaáichéne.
Ndaikuaái heta mba'e hesegua.
Che ndaikuaái mba’eve mborayhúgui.
Añemoarandu aikovohínakuri are.
Héê, nde reikuaa ha’e hetia’etereihague.
Cheverô ĝuarâ nde reikuaa ha'e oî porâitereihague
Nahániri, ha’e oî vaietereíkuri.
Héê, ha’e ipy’a porâiterei.
Héê, ha’e he’i ojejogua haĝua peteî  mopotîha reiporukuaátava.
He’i ojejogua haĝua peteî  aspiradora.
He’i ojejuhu haĝua peteî mopotîha.
Omopotîsékuri upe tuguy ao sorokuépe.
ko’ápe añetehápe ivaipaite opa mba’e, namombyryiete ore rógagui oñembokapu tapetépe.
Upe ñembokapu namombyryetéi aikohágui.
Upe ñembokapu namombyryetéi ógagui ha akyhyje asê haĝua.
Ñembokapu oiko che róga ypýpe, naiporâiete árupi.
Upéva añetehápe nda'upéichai, ooo naimbaretéi.
Naiméi nendive, iñe'êjojaitereiniko.
Chéverô ĝuarâ ere porâ upe iñe'êjoja rehegua.
Ere porâ naiñe'êjojaiha.
Añeha’âmbaite chepu'aka haĝua upépe.
Añeha'â añakarama hese.
Añetehápe añeha'â ajapo ikatumíva.
Ahejáta oho ha márô namañamo'âi cherapykuévo.
Héê, mba'eichagua jaguara'ýpa rereko?
Nde jaguaraýpiko iporâ?
Mba'eichagua mbarakajápiko rejuhu?
Mba'eichagua jagua ta'yrusúpa rereko?
Néi, erékuri ndera'yha, mboýpa?
Mboýpa ndera'y?
Ambyasy ndachera'yiha.
Ere ndera'yha, Mboy arýpiko oreko hikuái?
Oiméne ndaha'éi tapicha iñarandupavéva ko yvórape, katu, ehendumi, horyrasa, ha upéva, …oñatende umi tapicha oñemoaranduséva rehe.
Oiméne ndaha'éi tapicha iñarandupavéva ko yvórape, katu horyrasa, ha ojepy'apy umi  oñemoaranduséva rehe.
Iñarandu hikuái, katu oñembotavyete oî jave ambue oikuaa'ÿ ichupekuéra ypýpe.
Iñarandurasa, katu ndocha'éi umi oñemoarandura'âva rehe.
Peteîjey roho upépe, upépe, rojujeývo upe jehechaukahágui romyandy hesakâ haĝua ore róga sapy'agua jere ha oî peteî jaguane.
Upe jaguane orera'arô rojujey ore róga sapy'aguápe.
Rojuhu kavara ore róga sapy'aguápe rombogue rire lu.
Roju rire roikohágui rojuhu peteî jaguane ore róga sapy'aguápe.
Reikuaa, che membykuéra niko horyeterei hikuái, ipy'aporâ, chéverô ĝuarâ ndaupéichai, oikuaa umi mitâ tuichavévagui, katu….
Oikuaa hikuái umi mitâ tuichavévagui, katu che ñemoñarê ombogue.
Chejuruvy asy hetaite mba'e che membykuéra oikuaáva rehe.
Che mebykuéra añetehápe hovatavy.
Chéverô ĝuarâ tapichakuéra ojopyva'erâ ijyty, mmm, ha mmm, ha… ikatu iporâve oñemomichî tuichakuépe, upépe oî upe apañuâi guasuve, ndaha'éi ipohyikuépe.
Rejoko mboy ytýpa upe apañuâi guasuve upe ipohyikuégui.
Tapichakuéra ndojepy'apyiva'erâ oiméramo heta ijyty omohenda porâma guive.
Tapichakuéra ohechakuaava'erâ ijyty retakue ha ipohyikue.
Upéicharamo oîramo ojejavyha, nde upe ojavýva, ha'e che.
Ani rejepy'apy, oiméramo ojejavyha roipytyvôta emombo haĝua ijapére.
Ojejavýramo, ndekáusa.
Oiméramo ojavy, ohechakuaava'erâ.
Reikuaápa, hi'arieteve, rembovyvy ha rejapo âichagua mba'e omohu'â porâva tembiapo katupyry.
Ñembovyvýniko, tembiapo katupyry.
Oñembovyvy pya'epya'ente ha vaivaiete.
Ombovyvy mbeguekatu asy.
Héê, héê, che amba'apohápe ome'ê ndéve mokôi arapokôindy ñepyrûrâ, ha upéi ary ohasakuévo ome'êjapi ndéve peteî arave rereko peve irundy arapokôindy.
Nde ára ojupive ary ohasakuévo.
Nde ára ndahetavéi mbohapy áragui.
ära repytu'u haĝua hetahetave remba'apóramo tavaha rupi.
Upéicha, upéva iporâva reikóvo ko tetâme, natekotevêi rejepy'apy umi mba'ére.
Reikóramo ko tetâme reiko ndepy'a nde jurúpe, akói rekyhyje âichagua mba'égui.
Iporâva reikóvo ko tetâmeniko nderejepy'apyiva'erâ umíva umi mba'ére.
Iporâva okaháre niko nderejepy'apýi rejapova'erâ rehe tavaháre.
o, o, Ñandejára, upéva niko ha'ete jahasaporâtava.
Upéva ha'ete ku iporârasáva térâkatu ikaiguetereíva.
Upéva ha'ete ku vy'aguasurâ.
Ha'ete peteî mba'e ivaipajepéva.
Ha ko'áĝa areko che reindy peteî Alemania-pe.
Ha ko'áĝa areko che kyvy peteî oikóva Alemania-pe.
Areko che kypy'y oikóva ko'aĝaite Cuba-pe.
Areko peteî che kypy'y oñe'êva alemán ñe'ê.
Areko che membykuña'i michîva ko'áĝa hasýtava araha haĝua katu aháta, eee…
Ikatúne araha che memby upépe.
Hasyvéta chéve araha haĝua upépe che memby.
Ko'áĝa ha'e omboguatakuaáma imba'yru, ijeheguíntema oĝuahêkuaa.
Héê, Terehasa porâite ko'â arahaku.
Hi'â chéve ko'â arahaku repytu'ûtava terehasa vaiete.
Añetehápe arahaku oĝuahêmbaitéma.
Héê, Taiporâite nde arahaku.
Ndaha'éi ku roikuaaiteréiva ñana rehegua, katu…
Añetehápe ndoro'éi orerehe médiko ñanaha.
Ore médiko ñana ha orembopochy nda'upéichai orerecha'ÿramo.
Roñeha'âmba'eite oiko haĝua orehegui médiko ñana, katu ko'aĝaitéramo ndaha'éi gueteri.
Héê, chemandu'a che jarýi ha che ramói osêmi tapére ombyaty latíta.
Oî oñembyatýmiva ha omopotî tape.
Aipytyvô jepi che jarýi umíva ndive rombyaty haĝua latíta tapégui.
Rohómi rovy'a che ru rógape.
Ha upéicharamo kóva ndaha'éi nde jagua ypykue.
Vaicha chéve ndaha'éi nde jagua tenondegua kóva.
Ambyasyete, ndaikuaáikuri rehecha ramo ha jagua.
Ndaha'éi ko'áĝa ramo rerekóva mymba óga.
Upéicha, upéicha, … Ani rejapo ikatúva guive. Ha,
Ikatu eremi chéve mba'éichapa opa upe mombe'upy.
Natekotevêi rejapopa.
Tekotevê rehasapaite upe mba'e rehe.
Ái, Che ndaikói upe tenda rokápe.
Che ndaikói upe campus-pe.
Aiko namombyryiete upe campus-gui.
Aiko upe campus-pe.
Ajeíma upe oje'évagui, aipo peteî kuimba'e oikutihague hembirekópe ojuka peve ha'e oke rupi ambue kuimba'e ndive, hembirekokue ha'eséko, nde reikuaa mba'érepa añe'ê.
Peteî kuimba'e ojuka hembirekópe oñeno rupi ambue kuimba'e ndive ramoite ojepoi rire chupe upe haguetére.
Ojepori peteî kuimba'égui ojejavy oñembotykuévo, ha oho ojuka hembirekokuépe.
Hembireko ojasegura imenakue oñemboty haĝua omano meve.
Upéva niko peteî viru ñongatuhaichagua ñepytyvô rehe.
Ndarekói mba'eve ambojoja haĝua.
Peteî viru ñongatuha peteîteîguaichaguaite avei.
Umi viru oñeñongatúva peteîchaite.
HA'e Wills Point, ndaikuaái reikuaápa.
Nachemandu’ái ahendoramoguare oñeñe'ê Will Point rehe.
Ahendu Will Point-gui.
Cambridge-gua.
Ha'ese arekoha che aravopapaha ha oîha che sapatúre ha yvyra rakâmimíre, opamba'e morotîma amo yguýpe.
Oguejýnte yvýpe, che sapatu ipotî asy.
Chemyangekói ojaho'ipáramoguare che sapatu.
Che sapatu oñeñuâ pype.
Ojapo hikuái tembiapo mborayhupópe, upera rehe iporâ upe oficial reko
Ndacha'éi upe tembiapo ñemyakâ rehegua.
Chéve ĝuarâ iporâ upe oficial reko,
Oî ambue tapica oimo'âva oficial reko iporârasaha.
Upéicha jahecha ijeguaka porâiterei.
Ha'ete ku iporâitereítava.
Ndahasyiete rehechakuaa haĝua upéva.
Ivaieterei upe ha'ânga/idiseño
Roñongatu ore láta peteî mba'yrúpe ha umi kagua amuévape, kuatia ambuépe ha henyhêmbávo roroja mba'yruguatápe ha roraha haĝua heta roiko.
Hasy rehupy haĝua kuatia, vidrio ha láta peteîteî hyrýpe.
kuatiara'êvete henyhê, upéi láta ha upe rire vidrio.
Ore ndoroipe'ái ojuehegui ha romoingepa peteî vosápente.
Locust Hill, héê, ikatupyryeterei.
Locust Hill, héê, ikatupyryvéva.
Nahániri, Locust Hill nahániri.
Héê, upeichaite, Locust Hill.
Äpe areko kapi'i Bermuda, heta y oikotevê, mbyky asy rerekova'erâ ikatu haĝuáicha nde korapy ojogua golf okarusúpe.
Kapi'ipe Bermuda hembiapoiterei.
Umi Islas Bermidas-pegua kapi'ipe ikatu ojogua umi golf okarusúpe hovykuépe.
Sapy'apy'ánte remboykueva'erâ upe kapi'ipe Bermuda.
ni peteî níkel namboguejymo'âi, térâ osêva peteîcha, 30 centavo peve amboguejy  poteî liméta rehe. Opavave ohasa ko tetâ rembe'y ojugua haĝua jey'urâ ndahepýiva.
Peteî voko'i 6 liméta orekóva 30 centavo sa'ive rehepyme'êta upe tetâ mboypýri.
Hetave tapicha ohasa tetâ rembe'ÿ ojogua haĝua jey'urâ ndahepyivéva.
Umi liméta hepyve rehasávo upe tetâ mboypýri.
Héê, rohendu.
Ha'e imbarete añe che ahendu haĝuáicha.
Ndaikatúi ahendu ichupe.
Vaicha chéve ahendu ichupe.
Rejogua jave peteî mba'e, ko'ýte heta jave, rehepyme'ê ha katuete ojoapy hese ipyhýiva hi'arigua 10%
Rehepyme'ê ipohýiva 10% hi'arigua, hetáma.
Katuete rejoguatavo remoîmava'erâ hi'arigua 10% ipohýiva.
Neremoîriva'erâ upe ipyikue reikuaa haĝua mba'e repy.
Namemeigua, katu ojejapóva ñepytyvô ome'êva marandu ñemurâ rupive.
Namemeguái.
Jepiveguáicha.
Nameméi tapichakuéra ojehecha upéicha.
Upéva upe ojaposéva, upévare aha'arô taupéicha.
Hi'â ojapo upe ojaposéva.
Tuichaiterei mba'éta ojapóramo upe ojaposéva.
Ndorekói iñakâme ojapóvo umíva.
upéichaite, ha'eséko che ko'â léi pyahukuéra rehe hasy ko'áĝa.
Ijatuetépa, leikuéra ituja ha ndoikovéima.
Anetehápe upéicha, katu temimoîmby pypegua are rie oñemoañete.
Upevarehete, umi temimoîmby pyahu reheve, ko'áĝa hasyve.
Golly, reikuaápa ha'e ndoguatái tekorâ he'iháicha ha chéve ha'ete ku nachemyangekóiva upéva, ha katuete, omosê hikuái chupe jaguáicha.
Ha'e omondoropaite umi tekorâ.
Ha'e oguata iloitére ha upeichavérô oñemosê.
Ha'e oguataramo'â tekorâ he'iháicha.
Héê, ha'ete ndaiktumo'âiva'ekue, ajépa?
Chérô ĝuarâ oikóta katuete.
Añetehápe, ha'ete ku ndoikomo'âiva mba'eve.
Héê, vaicha chéve, ndoikomo'âi, katu ñaha'arô toiko.
Oî hikuái Washington, Buffalo Nueva Orleans ha Chicago mbytérupi, Wastington ndaitapykueiete nipeteîjey, Chicago mokôi jey ho'a ha peteîva Buffalo rovái.
Buffalo ijekipo porâve.
Peteîva umi mokôi ho'ava'ekue Chicago niko Buffalo.
Washington ho'a mokôijey.
mmm, roreko ipohýiva ao repýre.
Ao repy rehe ndaipóri ipohýiva.
Ipohýiva rehepyme'êva rehe hepyeterei.
Tropa niko oreko ipohýiva ohepyme'êva rehe.
Ko'áĝa ahechávo, kóva ko tenda avei chepy'ara'â.
Chepy'ara'â ko tenda.
Ha'ete ko ipytu vaíva ko tenda, ndachegustái.
Chesegura ko'ápe, upévare chegusta.
mmm, peteîva che memby, 18 jasy oreko.
Heta che memby.
Peteîva che memby, mitâkuña, 18 jasy oreko.
HI'âva'erâ chemembyve.
Upe mokôiha orekóva, peteîva umi jaguara'y ijaveguáva, ha pe mácho oiporúva hâi vaíkuri.
Ha'e ndaijaguara'ýi.
Upe mácho hâi vai, ha upe jaguara'y ojuhuva'ekue ytýpe.
Ijaveguáva oî 8, upe macho añoite hâi vaíva.
Ooo, upégui ou eréva.
Upépepiko rehenói chupe?
Ohenói mombyry guive.
Nohenói upe guive.
Añetehápe, ndaikuaái, ndarahái gueteri heta ao porâ, upéva añete.
Nameméi añemonde porâ.
Añemonde porâse che.
Akói che ao porâ.
Rehópa museo-pe Europa rupi?
Rohópiko museo europeo-pe?
Rehópiko museo-pe Canada rupi?
Katue oiméne reguerohoy reho Europa rupi.
Upépe reho porâ, Reikuaápa mba'épa opensa nde ao rehe ha che?
Ne ménape iporâ nde ao?
Mba'épa he'i ndekypy'y nde sái rehe?
Nde ao iporâiterei.
Mmm, ni aluminio forjado, aluminio prensado-nte.
Ojejapo itavera hepy'ÿvagui.
Ojejapo cobre añetégui.
Umíva niko mba'yru ikangýva.
Ha chemondýi gueteri.
Añemondyi'imi.
Añemondýi gueteri.
Nachemondýi.
Ha upéi upe mba'e mokôiha amañátava mboýpa ikatu ohepyme'ê.
Avei ahche umi mba'e ha'ekuéra ikatúva ohepyme'ê.
Mba'evete chéve mba'épa ikatu ohepyme'ê.
Jepivéramo, ndaikatúi ohupyty heta mba'e.
Néi, nachemandu'ái, ha'ete ku upéichava, ikatu porânte ndaupéichai, ha'e che, ha'e che.
Ndaikuaaporâi, katu, oimeva'erâ upéicha.
Nachemandu'apái, angepyhare ha'u heta vino.
Chemandu'a porâiterei opa mba'e oikova'ekue angepyhare rehe.
Nde téle reheve ha nde, chéverô ĝuarâ jehavira porâ remondahaguére upe téle ikatu rejejuka.
Reimo'âpa ojejukáramo ikatuha jehavira vevúi oñemonda jave?
Ndépa reimo'â jehavira porâneha mondaha ojejukáramo?
Ndéve ĝuarâpa iporâve upe téle omondávape jaheja tohorei?
Upe y rembe'y iporâ, ha iporâ jaha haĝua jahechami, upéva rehe oiméne upe tenda ahayhu rasa. Ha nde?
Añetehápe ahayhu rasa ko y rembe'y, ipotî ha oñeñangareko porâ.
Umi tenda ahaseveha apytépe oî ko y rembe'y, iporâiterei, ha nde moôpa rehoseve?
Chéverô ĝuarâ, iporâvéva upe ka'aguýpe jaha jajehoga'aposapy'ami.
Opoi marandu ñekuave'ê rehegua huguái rehe upe hyepýpe.
Ani repoi marandu ñekuave'êrâ.
Emoî marandu reikuave'êhápe yvarykue
Emoî Coca Cola ñekuave'ê upépe.
Néi, eheja chéve tajeasegura nde reimo'êha oî porâha ñaha'arô po ára mbokarâ.
Ndépa reimo'â oîtaha tapicha oimo'âva iporâha oha'arô po ára ojejoko aja?
Ojejokova'erâ po ára aja umi tapicha ojoguaséva imbokarâgui.
Mba'épa peje toha'arô hikuái okápe po aravo'i oñeme'ê meve chupekuéra ikuatiarâ?
Nde! Arekorôguare peteî Cocker Sapniel, upéva niko jagua oikóva okáre ha ahayhuveva'ekue! Nde!!
Ahayhuve jagua ikaiguéva ikotyvy'áva, ani peteîva ikyre'ÿeteríva oîséva okape ara pukukue.
Opaichagua jagua oîséva okápe ahayhu, imarangatujoaite umíva.
Chéverô guarâ ahayhuve umi jakua oka Cocker Spaniel-ichagua arekómiva.
Hi'íniko hiluái pokôi árape ohechapataha nde kuatia jahechápa ndaha'éipa preso-kue térâ noiméipa…
Kuatia jehecha niko imbegue.
Kuatia jehecha niko ikatu oraha peteî jasy.
He'íniko ohechataha hikuái kuatiakuéra ko'â pokôi ára pukukue.
Reikuaápa hi'âva'erâ chéve ajupi avión-pe, aĝuahê upépe ha tahasa porâ.
Isegurovéta aĝuahêramo upépe vevépe.
Aguejysetereíma aviôgui ha tahasa porâite aĝuahê rire.
Ndaveveichéne.
Nda'areguasúi, poteî jasy rupi, orekókuri 6 tapicha jurado ramo. Aimo'âkuri akói 12 oîhague ha ja'ekuaa joheipyre.
Avyra'e aimo'âvo akói jurado-pe oîha 12 tapicha.
Jurado-pe akói oîva 13 tapicha.
Ikatu ojeporavo peipotaháicha jurado-râ.
Opaite CEO umi viru rehe omba'apóva rendápe ha tapicha ohayhúva ko'â mba'e, upéicha ha'e oikuaaseve mba'épa oiko umi viru rehe omba'apóra renda rupi.
Chupe ndoúi ni ndohói umi cooperativa de ahorro y crédito
ha'e oikuaase umi cooperativa de ahorro y crédito rehegua.
HA'e oikuaaseve mba'éichapa ogana viru umi cooperativa de ahorro y crédito.
Aikuaa akói hembiapoitereiha hikuái ha avei ikatupyryha, avei tapichakuéra iñapañuâi hetaha ha ndaha'éi ku oguapýntema péicha oñe'êmbarei ha osê porâmbáma.
Che ndahechái ambue mba'e ndaha'éiva tapicha oguapýva oñe'ê iñapañuâi rehe.
añetehápe, pocâmi oñe'êtava iñapañuâ ko'aĝagua rehe.
Ha'ete tapichakuéra ndoguapýiva voi oñe'ê iñapañuâi rehe.
Brian, Plano, Texas-pe, Mba'éichapa reime ko árape?
Mba'éichapa , María?
Mba'etekópa nde ára?
Plano, Texas, tenda neporâva.
mmm, néi, guyryry mante ogueru rupi…
Guyryry mante renohê chugui.
Ipy'aguapyrasa ha nanemoapañuâi.
Oî tapicha ohayhúva upe guyryry ojapóva.
Héê, upevaite ajapo ko árape, araha Darkman, rehechápa, nahániri, ndahechái. Ahecháne ko pyhare.
Ahecháma  Derkman irundy jey.
Ndahechái gueteri Darkman, upévare ha'e ahataha ahecha ko pyhare.
Ahendu Darkman iporâha.
